syntax = "proto3";

enum PBLocationID 
{
    MAIN_BASE                   = 0;
    TOWN_ENTRANCE               = 1;
    TOWN                        = 2;
    MINES_ENTRANCE              = 3;
    START_ROUTE                 = 4;
}